添加自动清除临时文件的逻辑